--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
     <meta charset="UTF-8">
     <title>Welcome to Potion File </title>
   </head>
-  <body></body>
+  <body>
+<h1>Sei gay</h1>
+</body>
 </html>
