--- a/burrobirra.html
+++ b/burrobirra.html
@@ -3,6 +3,8 @@
   <head>
     <title>My Website</title>
   </head>
-  <body><h1>palle</h1>
+  <body>
+    <h1 style="color:blue">palle</h1>
+    <img src="sburro.jpg">
   </body>
 </html>
